[package]
description = "Provides an ergonomic, type-safe interface for interacting with the HashiCorp Nomad API (https://developer.hashicorp.com/nomad)"
edition = "2024"
license = "Apache-2.0"
name = "nomad-rs-api"
readme = "README.md"
repository = "https://github.com/rasorp/nomad-rs-api"
version = "0.0.1-alpha.1"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.17" }
time = { version = "0.3.41", features = ["serde-well-known"]}
